# AppTemplate_cpp_qt

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  LSLTemplate.cfg  Makefile  README.md  appveyor.yml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  reader.cpp  reader.h  sophisticated_recording_device.cpp  sophisticated_recording_device.h  split.pl  splittest.txt
.github/workflows/: build.yml  cppcmake.yml
appskeleton/: .appveyor.yml  .travis.yml  CMakeLists.txt  appveyor.yml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reader.cpp  reader.h  sophisticated_recording_device.cpp  sophisticated_recording_device.h  splittest.txt
cmake/: FindVendor.cmake  Findliblsl.cmake
doc/: .appveyor.yml.md  .bintray.json.md  .travis.yml.md  CMakeLists.txt.md  Findliblsl.cmake.md  appveyor.yml.md  main.cpp.md  mainwindow.cpp.md  mainwindow.h.md  reader.cpp.md  reader.h.md  sophisticated_recording_device.cpp.md  sophisticated_recording_device.h.md
scripts/: sign_and_notarize.sh
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/lsltemplate/: Config.hpp  Device.hpp  LSLOutlet.hpp  StreamThread.hpp
src/core/src/: Config.cpp  Device.cpp  LSLOutlet.cpp  StreamThread.cpp
src/gui/: CMakeLists.txt  Info.plist.in  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
